# InitGL

./: CMakeLists.txt  README.md
helloRectangle/: CMakeLists.txt
helloRectangle/source/: rectangle.cpp
helloTriangle/: CMakeLists.txt
helloTriangle/source/: triangle.cpp
libraries/: CMakeLists.txt
libraries/glad/: CMakeLists.txt
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/stb/: CMakeLists.txt
source/: main.cpp
